# Cell

./: .flake8  README.md  manage.py  pyproject.toml
.github/workflows/: ci.yml
assets/: README.ru.md
cell/: cell_script.py
tests/: test_cell.py
